--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
   </head>
 
   <body>
-    <div class="row"><h1>Omnifood</h1></div>
+    <header>
+      <nav>
+        <img
+          src="/resources/img/logo-white.png"
+          alt="Omnifood logo"
+          class="logo"
+        />
+        <ul class="main-nav">
+          <li><a href="#">food delivery</a></li>
+          <li><a href="#">how it works</a></li>
+          <li><a href="#">our cities</a></li>
+          <li><a href="#">sign up</a></li>
+        </ul>
+      </nav>
+      <div class="hero-text-box">
+        <h1>Goodbye junk food. <br />Hello super healthy meals.</h1>
+        <a href="#" class="btn btn-full">I'm hungry!</a>
+        <a href="#" class="btn btn-ghost">Show me more</a>
+      </div>
+    </header>
   </body>
 </html>
