--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
       rel="stylesheet"
     />
+    <link
+      href="https://unpkg.com/ionicons@4.4.8/dist/css/ionicons.min.css"
+      rel="stylesheet"
+    />
     <title>Omnifood</title>
   </head>
 
@@ -35,5 +39,53 @@
         <a href="#" class="btn btn-ghost">Show me more</a>
       </div>
     </header>
+    <section class="features">
+      <div class="features-text">
+        <h2>get food fast &mdash; not fast food</h2>
+        <p class="long-copy">
+          Hello, we’re Omnifood, your new premium food delivery service. We know
+          you’re always busy. No time for cooking. So let us take care of that,
+          we’re really good at it, we promise!
+        </p>
+      </div>
+      <div class="features-columns">
+        <div class="features-box">
+          <i class="icon ion-ios-infinite icon-big"></i>
+          <h3>up to 365 days/year</h3>
+          <p>
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage. You can also choose to order
+            more flexibly if that's your style.
+          </p>
+        </div>
+        <div class="features-box">
+          <i class="icon ion-ios-stopwatch icon-big"></i>
+          <h3>ready in 20 minutes</h3>
+          <p>
+            You're only twenty minutes away from your delicious and super
+            healthy meals delivered right to your home. We work with the best
+            chefs in each town to ensure that you're 100% happy.
+          </p>
+        </div>
+        <div class="features-box">
+          <i class="icon ion-ios-nutrition icon-big"></i>
+          <h3>100% organic</h3>
+          <p>
+            All our vegetables are fresh, organic and local. Animals are raised
+            without added hormones or antibiotics. Good for your health, the
+            environment, and it also tastes better!
+          </p>
+        </div>
+        <div class="features-box">
+          <i class="icon ion-ios-cart icon-big"></i>
+          <h3>order anything</h3>
+          <p>
+            We don't limit your creativity, which means you can order whatever
+            you feel like. You can also choose from our menu containing over 100
+            delicious meals. It's up to you!
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
