started with the meals section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           class="logo"
         />
         <ul class="main-nav">
-          <li><a href="#">food delivery</a></li>
-          <li><a href="#">how it works</a></li>
-          <li><a href="#">our cities</a></li>
-          <li><a href="#">sign up</a></li>
+          <li><a href="#">food delivery</a><span></span></li>
+          <li><a href="#">how it works</a><span></span></li>
+          <li><a href="#">our cities</a><span></span></li>
+          <li><a href="#">sign up</a><span></span></li>
         </ul>
       </nav>
       <div class="hero-text-box">
@@ -48,7 +48,7 @@
           we’re really good at it, we promise!
         </p>
       </div>
-      <div class="features-columns">
+      <div class="features-columns"">
         <div class="features-box">
           <i class="icon ion-ios-infinite icon-big"></i>
           <h3>up to 365 days/year</h3>
@@ -85,6 +85,18 @@
             delicious meals. It's up to you!
           </p>
         </div>
+      </div>
+    </section>
+    <section class="favourite-meals">
+      <div class="meals-showcase">
+        <img src="/resources/img/1.jpg" alt="meals" class="meal-photo">
+        <img src="/resources/img/2.jpg" alt="meals" class="meal-photo">
+        <img src="/resources/img/3.jpg" alt="meals" class="meal-photo">
+        <img src="/resources/img/4.jpg" alt="meals" class="meal-photo">
+        <img src="/resources/img/5.jpg" alt="meals" class="meal-photo">
+        <img src="/resources/img/6.jpg" alt="meals" class="meal-photo">
+        <img src="/resources/img/7.jpg" alt="meals" class="meal-photo">
+        <img src="/resources/img/8.jpg" alt="meals" class="meal-photo">
       </div>
     </section>
   </body>
