finished the meals sectioin

--- a/index.html
+++ b/index.html
@@ -88,16 +88,18 @@
       </div>
     </section>
     <section class="favourite-meals">
-      <div class="meals-showcase">
-        <img src="/resources/img/1.jpg" alt="meals" class="meal-photo">
-        <img src="/resources/img/2.jpg" alt="meals" class="meal-photo">
-        <img src="/resources/img/3.jpg" alt="meals" class="meal-photo">
-        <img src="/resources/img/4.jpg" alt="meals" class="meal-photo">
-        <img src="/resources/img/5.jpg" alt="meals" class="meal-photo">
-        <img src="/resources/img/6.jpg" alt="meals" class="meal-photo">
-        <img src="/resources/img/7.jpg" alt="meals" class="meal-photo">
-        <img src="/resources/img/8.jpg" alt="meals" class="meal-photo">
-      </div>
+      <ul class="meals-showcase">
+        <li><img src="/resources/img/1.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/2.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/3.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/4.jpg" alt="meals" class="meal-photo"></li>
+      </ul>
+      <ul class="meals-showcase">
+        <li><img src="/resources/img/5.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/6.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/7.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/8.jpg" alt="meals" class="meal-photo"></li>
+      </ul>
     </section>
   </body>
 </html>
