--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="features-box">
           <i class="icon ion-ios-cart icon-big"></i>
           <h3>order anything</h3>
-          <p>
+          <p class="">
             We don't limit your creativity, which means you can order whatever
             you feel like. You can also choose from our menu containing over 100
             delicious meals. It's up to you!
@@ -89,17 +89,88 @@
     </section>
     <section class="favourite-meals">
       <ul class="meals-showcase">
-        <li><img src="/resources/img/1.jpg" alt="meals" class="meal-photo"></li>
-        <li><img src="/resources/img/2.jpg" alt="meals" class="meal-photo"></li>
-        <li><img src="/resources/img/3.jpg" alt="meals" class="meal-photo"></li>
-        <li><img src="/resources/img/4.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables" class="meal-photo"></li>
+        <li><img src="/resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes" class="meal-photo"></li>
+        <li><img src="/resources/img/3.jpg" alt="Chicken breast steak with vegetables" class="meal-photo"></li>
+        <li><img src="/resources/img/4.jpg" alt="Autumn pumpkin soup" class="meal-photo"></li>
       </ul>
       <ul class="meals-showcase">
-        <li><img src="/resources/img/5.jpg" alt="meals" class="meal-photo"></li>
-        <li><img src="/resources/img/6.jpg" alt="meals" class="meal-photo"></li>
-        <li><img src="/resources/img/7.jpg" alt="meals" class="meal-photo"></li>
-        <li><img src="/resources/img/8.jpg" alt="meals" class="meal-photo"></li>
+        <li><img src="/resources/img/5.jpg" alt="Paleo beef steak with vegetables" class="meal-photo"></li>
+        <li><img src="/resources/img/6.jpg" alt="Healthy baguette with egg and vegetables" class="meal-photo"></li>
+        <li><img src="/resources/img/7.jpg" alt="Burger with cheddar and bacon" class="meal-photo"></li>
+        <li><img src="/resources/img/8.jpg" alt="Granola with cherries and strawberries" class="meal-photo"></li>
       </ul>
+    </section>
+    <section class="how-it-works">
+      <h2>
+        how it works &mdash; simple as 1, 2, 3
+      </h2>
+      <div class="steps-grid">
+        <div class="iphone-logo">
+          <img src="/resources/img/app-iPhone.png" alt="">
+        </div>
+        <div class="steps">
+          <div class="work-steps">
+            <div>1</div>
+              <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+          </div>
+          <div class="work-steps">
+            <div>2</div>
+              <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+          </div>
+          <div class="work-steps">
+            <div>3</div>
+            <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
+          </div>
+          <div class="store-buttons">
+            <a href="#" class="btn-app"><img src="/resources/img/download-app.svg" alt="app store logo"></a>
+            <a href="#" class="btn-app"><img src="/resources/img/download-app-android.png" alt="google play store"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-cities">
+      <h2>
+        we're currently in these cities
+      </h2>
+      <div class="cities-grid">
+        <div class="cities">
+          <img src="/resources/img/lisbon-3.jpg" alt="lisbon">
+          <h3>lisbon</h3>
+          <div class="cities-info">
+            <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>1600+ happy eaters</p>
+            <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>60+ top chefs</p>
+            <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_lx</a></p>
+          </div>
+        </div>
+        <div class="cities">
+            <img src="/resources/img/san-francisco.jpg" alt="san francisco">
+            <h3>san francisco</h3>
+            <div class="cities-info">
+              <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>3700+ happy eaters</p>
+              <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>160+ top chefs</p>
+              <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_sf</a></p>
+            </div>
+          </div>
+          <div class="cities">
+              <img src="/resources/img/berlin.jpg" alt="berlin">
+              <h3>berlin</h3>
+              <div class="cities-info">
+                <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>2300+ happy eaters</p>
+                <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>110+ top chefs</p>
+                <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_berlin</a></p>
+              </div>
+            </div>
+            <div class="cities">
+                <img src="/resources/img/london.jpg" alt="london">
+                <h3>london</h3>
+                <div class="cities-info">
+                    <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>1200+ happy eaters</p>
+                    <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>50+ top chefs</p>
+                    <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_london</a></p>
+                </div>
+              </div>
+      </div>
     </section>
   </body>
 </html>
