--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400"
       rel="stylesheet"
     />
-    <link
-      href="https://unpkg.com/ionicons@4.4.8/dist/css/ionicons.min.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <title>Omnifood</title>
   </head>
 
@@ -48,9 +45,9 @@
           we’re really good at it, we promise!
         </p>
       </div>
-      <div class="features-columns"">
+      <div class="features-grid"">
         <div class="features-box">
-          <i class="icon ion-ios-infinite icon-big"></i>
+            <i class="fas fa-infinity icon-big"></i>
           <h3>up to 365 days/year</h3>
           <p>
             Never cook again! We really mean that. Our subscription plans
@@ -59,7 +56,7 @@
           </p>
         </div>
         <div class="features-box">
-          <i class="icon ion-ios-stopwatch icon-big"></i>
+            <i class="fas fa-stopwatch icon-big"></i>
           <h3>ready in 20 minutes</h3>
           <p>
             You're only twenty minutes away from your delicious and super
@@ -68,7 +65,7 @@
           </p>
         </div>
         <div class="features-box">
-          <i class="icon ion-ios-nutrition icon-big"></i>
+            <i class="fas fa-apple-alt icon-big"></i>
           <h3>100% organic</h3>
           <p>
             All our vegetables are fresh, organic and local. Animals are raised
@@ -77,7 +74,7 @@
           </p>
         </div>
         <div class="features-box">
-          <i class="icon ion-ios-cart icon-big"></i>
+            <i class="fas fa-shopping-cart icon-big"></i>
           <h3>order anything</h3>
           <p class="">
             We don't limit your creativity, which means you can order whatever
@@ -137,39 +134,67 @@
         <div class="cities">
           <img src="/resources/img/lisbon-3.jpg" alt="lisbon">
           <h3>lisbon</h3>
-          <div class="cities-info">
-            <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>1600+ happy eaters</p>
-            <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>60+ top chefs</p>
-            <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_lx</a></p>
+          <div class="cities-info paragraph-text">
+            <i class="fas fa-user icon-small"></i>
+            2300+ happy eaters
+          </div>
+          <div class="cities-info paragraph-text">
+            <i class="fas fa-star icon-small"></i>
+            110+ top chefs
+          </div>
+          <div class="cities-info paragraph-text">
+            <i class="fab fa-twitter icon-small"></i>
+            <a href="#">@omnifood_berlin</a>
           </div>
         </div>
         <div class="cities">
-            <img src="/resources/img/san-francisco.jpg" alt="san francisco">
-            <h3>san francisco</h3>
-            <div class="cities-info">
-              <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>3700+ happy eaters</p>
-              <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>160+ top chefs</p>
-              <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_sf</a></p>
+          <img src="/resources/img/san-francisco.jpg" alt="san francisco">
+          <h3>san francisco</h3>
+          <div class="cities-info paragraph-text">
+            <i class="fas fa-user icon-small"></i>
+            2300+ happy eaters
+          </div>
+          <div class="cities-info paragraph-text">
+            <i class="fas fa-star icon-small"></i>
+            110+ top chefs
+          </div>
+          <div class="cities-info paragraph-text">
+            <i class="fab fa-twitter icon-small"></i>
+            <a href="#">@omnifood_berlin</a>
+            </div>
+        </div>
+        <div class="cities">
+          <img src="/resources/img/berlin.jpg" alt="berlin">
+          <h3>berlin</h3>
+          <div class="cities-info paragraph-text">
+            <i class="fas fa-user icon-small"></i>
+            2300+ happy eaters
+          </div>
+          <div class="cities-info paragraph-text">
+            <i class="fas fa-star icon-small"></i>
+            110+ top chefs
+          </div>
+          <div class="cities-info paragraph-text">
+            <i class="fab fa-twitter icon-small"></i>
+            <a href="#">@omnifood_berlin</a>
+          </div>
+        </div>
+        <div class="cities">
+          <img src="/resources/img/london.jpg" alt="london">
+          <h3>london</h3>
+          <div class="cities-info paragraph-text">
+            <i class="fas fa-user icon-small"></i>
+            2300+ happy eaters
+            </div>
+            <div class="cities-info paragraph-text">
+              <i class="fas fa-star icon-small"></i>
+              110+ top chefs
+            </div>
+            <div class="cities-info paragraph-text">
+              <i class="fab fa-twitter icon-small"></i>
+              <a href="#">@omnifood_berlin</a>
             </div>
           </div>
-          <div class="cities">
-              <img src="/resources/img/berlin.jpg" alt="berlin">
-              <h3>berlin</h3>
-              <div class="cities-info">
-                <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>2300+ happy eaters</p>
-                <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>110+ top chefs</p>
-                <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_berlin</a></p>
-              </div>
-            </div>
-            <div class="cities">
-                <img src="/resources/img/london.jpg" alt="london">
-                <h3>london</h3>
-                <div class="cities-info">
-                    <p class="paragraph-text"><i class="icon ion-ios-person icon-small"></i>1200+ happy eaters</p>
-                    <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i>50+ top chefs</p>
-                    <p class="paragraph-text"><i class="icon ion-ios-star icon-small"></i><a href="#">@omnifood_london</a></p>
-                </div>
-              </div>
       </div>
     </section>
   </body>
