--- a/index.html
+++ b/index.html
@@ -197,5 +197,36 @@
           </div>
       </div>
     </section>
+    <section class="section-testimonials">
+      <h2>our customers can't live without us</h2>
+      <div class="testimonials-grid">
+        <div class="testimonials">
+          <blockquote>
+              Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+          </blockquote>
+          <cite>
+              <img src="/resources/img/customer-1.jpg" alt="Alberto, customer">
+              &mdash; Alberto Duncan
+          </cite>
+        </div>
+        <div class="testimonials">
+          <blockquote>
+              Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!          </blockquote>
+          <cite>
+              <img src="/resources/img/customer-2.jpg" alt="Alberto, customer">
+              &mdash; Joana Silva
+          </cite>
+        </div>
+        <div class="testimonials">
+          <blockquote>
+              I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!          </blockquote>
+          <cite>
+              <img src="/resources/img/customer-3.jpg" alt="Alberto, customer">
+              &mdash; Milton Chapman
+          </cite>
+        </div>
+        </div> 
+      </div>
+    </section>
   </body>
 </html>
