started and finished the contact form section

--- a/index.html
+++ b/index.html
@@ -294,8 +294,32 @@
 
   <section class="section-contact-form">
     <h2>we're happy to hear from you</h2>
-    <div class="contact-form-grid">
-    </div>
+    <form method="post" action="#">
+      <div class="contact-form-grid">
+        <label for="name">Name</label>
+        <input id="name" name="name" type="text" placeholder="Your name please" required />
+
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" placeholder="Your email please" required />
+
+        <label for="experience">How did you find us?</label>
+        <select id="find-us" name="find-us" required>
+          <option value=""></option>
+          <option value="friend">Friend</option>
+          <option value="search">Search engine</option>
+          <option value="ad">Advertisement</option>
+          <option value="other">Other</option>
+        </select>
+
+        <label for="newsletter">Newsletter?</label>
+        <input id="newsletter" name="newsletter" type="checkbox" />
+
+        <label for="skills">Drop us a line</label>
+        <textarea id="message" name="message" rows="5" cols="20" placeholder="Your message here"></textarea>
+
+        <button type="submit">Send it!</button>
+      </div>
+    </form>
   </section>
 </body>
 
