started and finished to footer. refactored the contact form a bit

--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
     <h2>we're happy to hear from you</h2>
     <form method="post" action="#">
       <div class="contact-form-grid">
-        <label for="name">Name</label>
+        <label for="name">*Name</label>
         <input id="name" name="name" type="text" placeholder="Your name please" required />
 
-        <label for="email">Email</label>
+        <label for="email">*Email</label>
         <input id="email" name="email" type="email" placeholder="Your email please" required />
 
-        <label for="experience">How did you find us?</label>
+        <label for="experience">*How did you find us?</label>
         <select id="find-us" name="find-us" required>
           <option value=""></option>
           <option value="friend">Friend</option>
@@ -321,6 +321,26 @@
       </div>
     </form>
   </section>
+
+  <footer>
+    <div class="footer-grid">
+      <div class="footer-nav">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">iOS App</a></li>
+          <li><a href="#">Android App</a></li>
+        </ul>
+      </div>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter-square"></i></a>
+        <a href="#"><i class="fab fa-google-plus-square"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
