added code to make the site mobile friendly

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="vendors/css/normalize.css" />
   <link rel="stylesheet" href="vendors/css/grid.css" />
   <link rel="stylesheet" href="resources/css/style.css" />
+  <link rel="stylesheet" href="resources/css/queries.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
@@ -33,7 +34,7 @@
     </div>
   </header>
 
-  <section class="features">
+  <section class="section-features">
     <div class="features-text">
       <h2>get food fast &mdash; not fast food</h2>
       <p class="long-copy">
@@ -42,43 +43,43 @@
         we’re really good at it, we promise!
       </p>
     </div>
-    <div class="features-grid"">
-        <div class=" features-box">
-      <i class="fas fa-infinity icon-big"></i>
-      <h3>up to 365 days/year</h3>
-      <p>
-        Never cook again! We really mean that. Our subscription plans
-        include up to 365 days/year coverage. You can also choose to order
-        more flexibly if that's your style.
-      </p>
-    </div>
-    <div class="features-box">
-      <i class="fas fa-stopwatch icon-big"></i>
-      <h3>ready in 20 minutes</h3>
-      <p>
-        You're only twenty minutes away from your delicious and super
-        healthy meals delivered right to your home. We work with the best
-        chefs in each town to ensure that you're 100% happy.
-      </p>
-    </div>
-    <div class="features-box">
-      <i class="fas fa-apple-alt icon-big"></i>
-      <h3>100% organic</h3>
-      <p>
-        All our vegetables are fresh, organic and local. Animals are raised
-        without added hormones or antibiotics. Good for your health, the
-        environment, and it also tastes better!
-      </p>
-    </div>
-    <div class="features-box">
-      <i class="fas fa-shopping-cart icon-big"></i>
-      <h3>order anything</h3>
-      <p class="">
-        We don't limit your creativity, which means you can order whatever
-        you feel like. You can also choose from our menu containing over 100
-        delicious meals. It's up to you!
-      </p>
-    </div>
+    <div class="container">
+      <div class="features-box">
+        <i class="fas fa-infinity icon-big"></i>
+        <h3>up to 365 days/year</h3>
+        <p>
+          Never cook again! We really mean that. Our subscription plans
+          include up to 365 days/year coverage. You can also choose to order
+          more flexibly if that's your style.
+        </p>
+      </div>
+      <div class="features-box">
+        <i class="fas fa-stopwatch icon-big"></i>
+        <h3>ready in 20 minutes</h3>
+        <p>
+          You're only twenty minutes away from your delicious and super
+          healthy meals delivered right to your home. We work with the best
+          chefs in each town to ensure that you're 100% happy.
+        </p>
+      </div>
+      <div class="features-box">
+        <i class="fas fa-apple-alt icon-big"></i>
+        <h3>100% organic</h3>
+        <p>
+          All our vegetables are fresh, organic and local. Animals are raised
+          without added hormones or antibiotics. Good for your health, the
+          environment, and it also tastes better!
+        </p>
+      </div>
+      <div class="features-box">
+        <i class="fas fa-shopping-cart icon-big"></i>
+        <h3>order anything</h3>
+        <p class="">
+          We don't limit your creativity, which means you can order whatever
+          you feel like. You can also choose from our menu containing over 100
+          delicious meals. It's up to you!
+        </p>
+      </div>
     </div>
   </section>
 
@@ -96,11 +97,12 @@
       <li><img src="/resources/img/8.jpg" alt="Granola with cherries and strawberries" class="meal-photo"></li>
     </ul>
   </section>
-  <section class="how-it-works">
+
+  <section class="section-works">
     <h2>
       how it works &mdash; simple as 1, 2, 3
     </h2>
-    <div class="steps-grid">
+    <div class="container">
       <div class="iphone-logo">
         <img src="/resources/img/app-iPhone.png" alt="">
       </div>
@@ -129,7 +131,7 @@
     <h2>
       we're currently in these cities
     </h2>
-    <div class="cities-grid">
+    <div class="container">
       <div class="cities">
         <img src="/resources/img/lisbon-3.jpg" alt="lisbon">
         <h3>lisbon</h3>
@@ -199,7 +201,7 @@
 
   <section class="section-testimonials">
     <h2>our customers can't live without us</h2>
-    <div class="testimonials-grid">
+    <div class="container">
       <div class="testimonials">
         <blockquote>
           Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is
@@ -234,7 +236,7 @@
 
   <section class="section-plans">
     <h2>start eating healthy today</h2>
-    <div class="plans-grid">
+    <div class="container">
       <div class="plans-box">
         <div>
           <h3>premium</h3>
@@ -292,10 +294,10 @@
     </div>
   </section>
 
-  <section class="section-contact-form">
+  <section class="section-form">
     <h2>we're happy to hear from you</h2>
     <form method="post" action="#">
-      <div class="contact-form-grid">
+      <div class="container">
         <label for="name">*Name</label>
         <input id="name" name="name" type="text" placeholder="Your name please" required />
 
@@ -323,7 +325,7 @@
   </section>
 
   <footer>
-    <div class="footer-grid">
+    <div class="container">
       <div class="footer-nav">
         <ul>
           <li><a href="#">About Us</a></li>
